// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-talon-one's updateCustomerProfilesAudiences destination action: all fields 1`] = `
Object {
  "data": Array [
    Object {
      "addAudienceIds": Array [
        -5649754167967744,
      ],
      "customerProfileId": "g64#i$3",
      "deleteAudienceIds": Array [
        -5649754167967744,
      ],
    },
  ],
}
`;

exports[`Testing snapshot for actions-talon-one's updateCustomerProfilesAudiences destination action: required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customerProfileId": "g64#i$3",
    },
  ],
}
`;
